Fixed shortestPath, and some tests
- Fixed Graph.shortestPath() so it no longer produced incorrect paths
- Updated outdated tests
- Seperated GraphBuilder.addNeighbourChain into undirected and directed variants